(styling) added color scheme to layout

--- a/app/views/herbs/graph_one.html.erb
+++ b/app/views/herbs/graph_one.html.erb
@@ -1,5 +1,4 @@
-<h1>Herbs#graph_one</h1>
-<p>Find me in app/views/herbs/graph_one.html.erb</p>
+<% provide(:title, "Graph One") %>
 <style>
 .bar {
 	fill: #6d9eff;
