(styling) added styling to layout

--- a/app/views/herbs/graph_two.html.erb
+++ b/app/views/herbs/graph_two.html.erb
@@ -1,4 +1,5 @@
-<center><h1>Herbs Chart</h1></center>
+<% provide(:title, "Table") %>
+<center><h1>Herbs Table</h1></center>
 
 <div class="container">
 
