--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   </head>
 
   <nav class="navbar navbar-default navbar-expand-sm">
-    <%= link_to 'Home', root_path, method: :get %>
+    &nbsp;&nbsp;<%= link_to 'Home', root_path, method: :get %>
+    &nbsp;&nbsp;<%= link_to 'Info', static_pages_info_path, method: :get %>
 		&nbsp;&nbsp;<li class="dropdown" style="list-style-type: none;">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Charts</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -20,7 +21,16 @@
 		</li>
 	</nav>
 
-  <body>
+	<div class="center jumbotron jumbotron-fluid" style="background-color: #8e0900;">
+		<div class="container">
+			&nbsp;<h2>Herbs <span id="bar">|</span>
+			<%= yield(:title) %></h2>
+			<%= yield(:p) %></h2>
+		</div>
+	</div>
+		
+
+  <body style="background-color: #ffbe70;">
     <%= yield %>
   </body>
 </html>
