--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
 		&nbsp;&nbsp;<li class="dropdown" style="list-style-type: none;">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Charts</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<%= link_to 'Graph One', herbs_graph_one_path, method: :get %><br>
-					<%= link_to 'Graph Two', herbs_graph_two_path, method: :get %>
+					&nbsp;&nbsp;<%= link_to 'Graph One', herbs_graph_one_path, method: :get %><br>
+					&nbsp;&nbsp;<%= link_to 'Graph Two', herbs_graph_two_path, method: :get %>
 			</div>
 		</li>
 	</nav>
