--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,4 +33,8 @@
   <body style="background-color: #ffbe70;">
     <%= yield %>
   </body>
+
+ <br>&nbsp;<br>&nbsp;<br>&nbsp;<br>
+  <div class="footer navbar-fixed-bottom">
+  </div>
 </html>
