--- a/app/assets/stylesheets/herbs.scss
+++ b/app/assets/stylesheets/herbs.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Herbs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.bar {
+  fill: #ff5555;
+}
+
+.bar:hover {
+	fill: #ff9393;
+}
+
+.tooltip {
+  position: absolute;
+  width: 275px;
+  height: 40px;
+  pointer-events: none;
+  color: #000000;
+}
