--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>SetsOfData</title>
     <%= csrf_meta_tags %>
+    <%= action_cable_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -12,6 +13,7 @@
   <nav class="navbar navbar-default navbar-expand-sm">
     &nbsp;&nbsp;<%= link_to 'Home', root_path, method: :get %>
     &nbsp;&nbsp;<%= link_to 'Info', static_pages_info_path, method: :get %>
+    &nbsp;&nbsp;<%= link_to 'Rooms#show', rooms_show_path, method: :get %>
 		&nbsp;&nbsp;<li class="dropdown" style="list-style-type: none;">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Charts</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
