--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
 <% provide(:title, "Home") %>
+<% provide(:p, "This site is all about a select amount of herbs and their antioxidant levels. Antioxidants protect our molecules from free radicals by safely interacting with free radicals in order to finish the chain reaction. This finishing of the chain reaction prevents the free radicals from successfully damaging vital molecules.") %>
 
 
