--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,14 @@
   <nav class="navbar navbar-default navbar-expand-sm">
     &nbsp;&nbsp;<%= link_to 'Home', root_path, method: :get %>
     &nbsp;&nbsp;<%= link_to 'Info', static_pages_info_path, method: :get %>
-    &nbsp;&nbsp;<%= link_to 'Rooms#show', rooms_show_path, method: :get %>
+    <!--&nbsp;&nbsp;%= link_to 'Rooms#show', rooms_show_path, method: :get -->
 		&nbsp;&nbsp;<li class="dropdown" style="list-style-type: none;">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Charts</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					&nbsp;&nbsp;<%= link_to 'Graph One', herbs_graph_one_path, method: :get %><br>
-					&nbsp;&nbsp;<%= link_to 'Graph Two', herbs_graph_two_path, method: :get %>
+					&nbsp;&nbsp;<%= link_to 'Graph Two', herbs_graph_two_path, method: :get %><br>
+					&nbsp;&nbsp;<%= link_to 'Graph Three', herbs_graph_three_path, method: :get %>
+					&nbsp;&nbsp;<%= link_to 'Graph Four', herbs_graph_four_path, method: :get %>
 			</div>
 		</li>
 	</nav>
