--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,14 @@
     &nbsp;&nbsp;<%= link_to 'Home', root_path, method: :get %>
     <!--&nbsp;&nbsp;%= link_to 'Info', static_pages_info_path, method: :get %-->
     <!--&nbsp;&nbsp;%= link_to 'Rooms#show', rooms_show_path, method: :get -->
-		&nbsp;&nbsp;<%= link_to 'Chart', herbs_graph_two_path, method: :get %><br>
+		&nbsp;&nbsp;<%= link_to 'Herb Data', herbs_graph_two_path, method: :get %><br>
+    &nbsp;&nbsp;<%= link_to 'Sources', static_pages_sources_path, method: :get %>
 		&nbsp;&nbsp;
 		<li class="dropdown" style="list-style-type: none;">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Phenolic Content</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<%= link_to 'Graph One', herbs_graph_one_path, method: :get %><br>
+					<%= link_to 'Graph Six', herbs_graph_six_path, method: :get %><br>
 			</div>
 		</li>
 		&nbsp;&nbsp;
