(verbiage) added my name as dev

--- a/app/views/static_pages/sources.html.erb
+++ b/app/views/static_pages/sources.html.erb
@@ -3,8 +3,10 @@
 
 <div class="container">
 	
+
 			<h6>Dataset: chinese_herbs.csv</h6>
 			Source: H. Liu, N. Qiu, H. Ding, R. Yao (2008). "Polyphenols Contents and Antioxidant Capacity of 68 Chinese Herbals Suitable for Medical or Food Uses," Food Research International, Vol. 41, pp. 363-370.
 
+			<h6>Developer: Kendra Kuivenhoven</h6>
 </div>
 	
