(feature) added individual show page for each herb

--- a/app/views/herbs/graph_two.html.erb
+++ b/app/views/herbs/graph_two.html.erb
@@ -20,7 +20,10 @@
 	<tbody>
 		<% @herbs.each do |herb| %>
 			<tr>
-				<td><%= herb.name %></td>
+				<td>
+					<!--%= herb.name %> and %= herb.id %-->
+					<%= link_to "#{herb.name}", herbs_show_path(id: herb.id) %>
+				</td>
 				<td><%= herb.TPC_M %></td>
 				<td><%= herb.TPC_SD %></td>
 				<td><%= herb.Flav_M %></td>
