--- a/app/views/herbs/show.html.erb
+++ b/app/views/herbs/show.html.erb
@@ -3,12 +3,12 @@
 
 
 <div class="container">
-	<table class="table">
+	<table class="table" id="myTable">
 		<thead>
 			<tr>
 				<th scope="col">Type of<br>measurement</col>
-				<th scope="col">Mean</col>
-				<th scope="col">SD</col>
+				<th scope="col" onclick="sortTheNums(1)">Mean</col>
+				<th scope="col" onclick="sortTheNums(2)">SD</col>
 			</tr>
 		</thead>
 		<tbody>
