--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,37 +15,41 @@
     <!--&nbsp;&nbsp;%= link_to 'Info', static_pages_info_path, method: :get %-->
     <!--&nbsp;&nbsp;%= link_to 'Rooms#show', rooms_show_path, method: :get -->
 		&nbsp;&nbsp;<%= link_to 'Herb Data', herbs_graph_two_path, method: :get %><br>
-    &nbsp;&nbsp;<%= link_to 'Sources', static_pages_sources_path, method: :get %>
 		&nbsp;&nbsp;
 		<li class="dropdown" style="list-style-type: none;">
+			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Charts/Graphs</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<%= link_to 'Phenolic Content', herbs_graph_one_path, method: :get %><br>
+					<%= link_to 'Flavonoids Content', herbs_graph_three_path, method: :get %>
+					<%= link_to 'FRAP Value', herbs_graph_four_path, method: :get %>
+					<%= link_to 'DPPH Scavenging Capacity', herbs_graph_five_path, method: :get %>
+		</li>
+    &nbsp;&nbsp;<%= link_to 'Sources', static_pages_sources_path, method: :get %>
+	</nav>
+		<!--li class="dropdown" style="list-style-type: none;">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Phenolic Content</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<%= link_to 'Graph One', herbs_graph_one_path, method: :get %><br>
-					<%= link_to 'Graph Six', herbs_graph_six_path, method: :get %><br>
+					%= link_to 'Graph One', herbs_graph_one_path, method: :get %><br>
+					%= link_to 'Graph Six', herbs_graph_six_path, method: :get %><br>
 			</div>
 		</li>
 		&nbsp;&nbsp;
 		<li class="dropdown" style="list-style-type: none;">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Flavonoids Content</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<%= link_to 'Graph Three', herbs_graph_three_path, method: :get %>
-			</div>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown"-->
+			<!--/div>
 		</li>
 		&nbsp;&nbsp;
 		<li class="dropdown" style="list-style-type: none;">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">FRAP Value</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<%= link_to 'Graph Four', herbs_graph_four_path, method: :get %>
 			</div>
 		</li>
 		&nbsp;&nbsp;
 		<li class="dropdown" style="list-style-type: none;">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">DPPH Scavenging Cap.</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<%= link_to 'Graph Five', herbs_graph_five_path, method: :get %>
-			</div>
-		</li>
-	</nav>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown"-->
+			<!--/div-->
 
 	<div class="center jumbotron jumbotron-fluid" style="background-color: #8e0900;">
 		<div class="container">
