(fix) adjusted spacing in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,10 @@
 		<li class="dropdown" style="list-style-type: none;">
 			<a class="dropdown-toggle" href="#" data-toggle="dropdown">Charts/Graphs</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<%= link_to 'Phenolic Content', herbs_graph_one_path, method: :get %><br>
-					<%= link_to 'Flavonoids Content', herbs_graph_three_path, method: :get %>
-					<%= link_to 'FRAP Value', herbs_graph_four_path, method: :get %>
-					<%= link_to 'DPPH Scavenging Capacity', herbs_graph_five_path, method: :get %>
+					&nbsp;&nbsp;<%= link_to 'Phenolic Content', herbs_graph_one_path, method: :get %><br>
+					&nbsp;&nbsp;<%= link_to 'Flavonoids Content', herbs_graph_three_path, method: :get %><br>
+					&nbsp;&nbsp;<%= link_to 'FRAP Value', herbs_graph_four_path, method: :get %><br>
+					&nbsp;&nbsp;<%= link_to 'DPPH Scavenging Cap.', herbs_graph_five_path, method: :get %>
 		</li>
     &nbsp;&nbsp;<%= link_to 'Sources', static_pages_sources_path, method: :get %>
 	</nav>
