(feature) clickable header for sorting for name of herb

--- a/app/views/herbs/show.html.erb
+++ b/app/views/herbs/show.html.erb
@@ -2,6 +2,47 @@
 <% provide(:p, "Below is displayed data on the #{@herb.name} herb.") %>
 
 <script>
+function sortTable(n) {
+  var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+  table = document.getElementById("showTable");
+  switching = true;
+  dir = "asc"; 
+  while (switching) {
+    switching = false;
+    rows = table.getElementsByTagName("TR");
+    for (i = 1; i < (rows.length - 1); i++) {
+      shouldSwitch = false;
+      x = rows[i].getElementsByTagName("TD")[n];
+      //alert(x.innerHTML);
+      y = rows[i + 1].getElementsByTagName("TD")[n];
+      //alert(y.innerHTML); //grabs the whole li class dropwdown row
+      if (dir == "asc") {
+        if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+          shouldSwitch= true;
+          break;
+        }   
+      } else if (dir == "desc") {
+        if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+          shouldSwitch= true;
+          break;
+        }   
+      }   
+    }   
+    if (shouldSwitch) {
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+      switchcount ++;    
+    } else {
+      if (switchcount == 0 && dir == "asc") {
+        dir = "desc";
+        switching = true;
+      }   
+    }   
+  }
+}
+
+
+
 function show_sortTheNums(n){
   var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
   table = document.getElementById("showTable");
@@ -48,7 +89,7 @@ function show_sortTheNums(n){
 	<table class="table" id="showTable">
 		<thead>
 			<tr>
-				<th scope="col">Type of<br>measurement</col>
+				<th scope="col" onclick="sortTable(0)">Type of<br>measurement</col>
 				<th scope="col" onclick="show_sortTheNums(1)">Mean</col>
 				<th scope="col" onclick="show_sortTheNums(2)">SD</col>
 			</tr>
