--- a/app/views/herbs/graph_two.html.erb
+++ b/app/views/herbs/graph_two.html.erb
@@ -1,6 +1,49 @@
 <% provide(:title, "Table") %>
 <center><h1>Herbs Table</h1></center>
 <script>
+function sortTable(n) {
+  var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+  table = document.getElementById("myTable");
+  switching = true;
+  dir = "asc"; 
+  while (switching) {
+    switching = false;
+    rows = table.getElementsByTagName("TR");
+    for (i = 1; i < (rows.length - 1); i++) {
+      shouldSwitch = false;
+      x = rows[i].getElementsByTagName("TD")[n];
+      //alert(x.innerHTML);
+      y = rows[i + 1].getElementsByTagName("TD")[n];
+      //alert(y.innerHTML); //grabs the whole li class dropwdown row
+      if (dir == "asc") {
+        if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+          shouldSwitch= true;
+          break;
+        }   
+      } else if (dir == "desc") {
+        if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+          shouldSwitch= true;
+          break;
+        }   
+      }   
+    }   
+    if (shouldSwitch) {
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+      switchcount ++;    
+    } else {
+      if (switchcount == 0 && dir == "asc") {
+        dir = "desc";
+        switching = true;
+      }   
+    }   
+  }
+}
+
+
+
+
+
 function sortTheNums(n){
   var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
   table = document.getElementById("myTable");
@@ -47,7 +90,7 @@ function sortTheNums(n){
 <table class="table" id="myTable">
 	<thead>
 		<tr>
-			<th scope="col">Name</th>
+			<th scope="col" onclick="sortTable(0)">Name</th>
 			<th scope="col" onclick="sortTheNums(1)">TPC_M</th>
 			<th scope="col" onclick="sortTheNums(2)">TPC_SD</th>
 			<th scope="col" onclick="sortTheNums(3)">Flav_M</th>
