(feature) added partials describing attributes of data

--- a/app/views/herbs/graph_one.html.erb
+++ b/app/views/herbs/graph_one.html.erb
@@ -1,10 +1,13 @@
-<% provide(:title, "Graph One") %>
+<% provide(:title, "Phenolic Content") %>
+<% provide(:p, "This graph represents the measurements of phenolic content that was gathered from the study of the 68 herbs. Information about what phenolic content is can be found below the graph.") %>
 
 <div class="container">
+
 	<center>
 		<div id="graphOne">
 		</div>
 	</center>
+		<%= render 'static_pages/phenolic_compounds' %>
 </div>
 
 <script>
