--- a/app/views/herbs/graph_three.html.erb
+++ b/app/views/herbs/graph_three.html.erb
@@ -1,10 +1,12 @@
-<% provide(:title, "Graph 3") %>
+<% provide(:title, "Flavonoids content") %>
+<% provide(:p, "This graph represents the measurements of flavonoids content that was gathered from the study of the 68 herbs. Information about what flavonoids content is can be found below the graph.") %>
 
 <div class="container">
 	<center>
 		<div id="graphThree">
 		</div>
 	</center>
+		<%= render 'static_pages/flavonoids_content' %>
 </div>
 
 <script>
