--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,5 +1,7 @@
 .navbar {
-	background-color: #ffbe70;
+	// background-color: #ffbe70;
+	background-color: #e67e00;
+	//background-color: #8e0900;
 	color: #000000;
 	a {
 		color: #000000;
@@ -14,3 +16,4 @@
 #bar {
 	font-size: 40px;
 }
+
