(feature) added descriptions below graphs as to the method and information measured from the data

--- a/app/views/herbs/graph_five.html.erb
+++ b/app/views/herbs/graph_five.html.erb
@@ -1,10 +1,12 @@
-<% provide(:title, "Graph Five") %>
+<% provide(:title, "DPPH Scavenging Capacity") %>
+<% provide(:p, "The DPPH scavenging capacity values of 68 herbs - more information is provided below the graph. Tap on the bars to learn more about the particular bar.") %>
 
 <div class="container">
 	<center>
 		<div id="graphFive">
 		</div>
 	</center>
+	<%= render 'static_pages/DPPH_sca_cap' %>
 </div>
 
 <script>
