--- a/app/views/herbs/graph_four.html.erb
+++ b/app/views/herbs/graph_four.html.erb
@@ -1,10 +1,13 @@
-<% provide(:title, "Graph Four") %>
+<% provide(:title, "FRAP values") %>
+<% provide(:p, "The FRAP values of 68 herbs - more information is provided below the graph. Tap on the bars to learn more about the particular bar.") %>
 
 <div class="container">
 	<center>
 		<div id="graphFour">
 		</div>
 	</center>
+
+	<%= render 'static_pages/FRAP_value' %>
 </div>
 
 <script>
