--- a/app/views/herbs/graph_five.html.erb
+++ b/app/views/herbs/graph_five.html.erb
@@ -49,7 +49,7 @@ svg.selectAll("rect")
         div.transition()
           .duration(200)
           .style("opacity", .9);
-        div.html("<center>" + d[0] + " has a mean of <br>" + d[7] + "% of DPPH scavenging capacity</center>")
+        div.html("<center>" + d[0] + " has a percentage of <br>" + d[7] + "% of DPPH scavenging capacity</center>")
           .style("left", (d3.event.pageX) + "px")
           .style("top", (d3.event.pageY - 28) + "px")
           .style("white-space", "nowrap")
