(verbiage) added information on what the table contains

--- a/app/views/herbs/graph_two.html.erb
+++ b/app/views/herbs/graph_two.html.erb
@@ -1,4 +1,6 @@
-<% provide(:title, "Table") %>
+<% provide(:title, "68 Herbs") %>
+<% provide(:p, "A collection of research on 68 herbs from the chinese_herbs.csv data set.") %>
+
 <center><h1>Herbs Table</h1></center>
 <script>
 function sortTable(n) {
