--- a/app/views/static_pages/_FRAP_value.html.erb
+++ b/app/views/static_pages/_FRAP_value.html.erb
@@ -1,6 +1,6 @@
 <br><br>
 <h6>What is a FRAP value? And why is it important?</h6>
-<p>
+<p style="bottom-padding: 0px;">
 &emsp;FRAP stands for Ferric Reducing Ability of Plasma. The FRAP assay method is used to measure the "antioxidant power" of herbs, fruits and vegetables. A higher antioxidant capacity correlates to a higher FRAP value. <br>
 &emsp;FRAP value is based on reducing ferric ion because a antioxidant is the reducting agent. An antioxidant is a compound that is capable of donating a single hydrogen atom or a single electron for reduction. <br>
 &emsp;Thus, the herbs on the chart with a higher FRAP value correlates to a high antioxidant capacity.
