(verbiage) added information about each header to show and index page

--- a/app/assets/stylesheets/herbs.scss
+++ b/app/assets/stylesheets/herbs.scss
@@ -32,3 +32,22 @@ table {
 		}
 	}
 }
+
+#key {
+	thead {
+		tr {
+			th {
+				font-size: 14px;
+				color: #000000;
+			}
+		}
+	}
+	tbody {
+		tr {
+			td {
+				font-size: 14px;
+				color: #000000;
+			}
+		}
+	}
+}
