--- a/app/views/herbs/show.html.erb
+++ b/app/views/herbs/show.html.erb
@@ -86,6 +86,7 @@ function show_sortTheNums(n){
 
 
 <div class="container">
+
 	<table class="table" id="showTable">
 		<thead>
 			<tr>
@@ -123,6 +124,7 @@ function show_sortTheNums(n){
 
 
 <div class="container">
+	<br><%= render 'herbs/key' %>
 	<%= render 'static_pages/phenolic_compounds' %>
 	<%= render 'static_pages/flavonoids_content' %>
 	<%= render 'static_pages/FRAP_value' %>
