--- a/app/views/herbs/graph_one.html.erb
+++ b/app/views/herbs/graph_one.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Phenolic Content") %>
-<% provide(:p, "This graph represents the measurements of phenolic content that was gathered from the study of the 68 herbs. Information about what phenolic content is can be found below the graph.") %>
+<% provide(:p, "This graph represents the measurements of phenolic content that was gathered from the study of the 68 herbs. Information about what phenolic content is can be found below the graph. Please tap on a bar to learn more.") %>
 
 <div class="container">
 
