--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
 					&nbsp;&nbsp;<%= link_to 'Phenolic Content', herbs_graph_one_path, method: :get %><br>
 					&nbsp;&nbsp;<%= link_to 'Flavonoids Content', herbs_graph_three_path, method: :get %><br>
 					&nbsp;&nbsp;<%= link_to 'FRAP Value', herbs_graph_four_path, method: :get %><br>
-					&nbsp;&nbsp;<%= link_to 'DPPH Scavenging Cap.', herbs_graph_five_path, method: :get %>
+					&nbsp;&nbsp;<%= link_to 'DPPH Scavenging Cap.', herbs_graph_five_path, method: :get %><br>
+					<!--&nbsp;&nbsp;%= link_to 'test graph', herbs_graph_six_path, method: :get %><br>
+					&nbsp;&nbsp;%= link_to '7th test graph', herbs_graph_seven_path, method: :get %-->
 		</li>
     &nbsp;&nbsp;<%= link_to 'Sources', static_pages_sources_path, method: :get %>
 	</nav>
