--- a/app/views/static_pages/_phenolic_compounds.html.erb
+++ b/app/views/static_pages/_phenolic_compounds.html.erb
@@ -1,7 +1,7 @@
 <br><br>
 <h6>What is Phenolic content?</h6>
 <p>
-&emsp;Phenols are a class of chemical compounds. This class of chemical compounds consist of a hydroxyl group (--OH). This hydroxyl group is directly bonded to a group that is considered an <i>aromatic hydrocarbon group</i>. For this class, the simplest is <i>phenol</i> which is also knowsn as carbolic acid C.
+&emsp;Phenols are a class of chemical compounds. This class of chemical compounds consist of a hydroxyl group (--OH). This hydroxyl group is directly bonded to a group that is considered an <i>aromatic hydrocarbon group</i>. For this class, the simplest is <i>phenol</i> which is also known as carbolic acid C.
 <br>
 &emsp;In plants, phenolic compounds are bioactive substances and occur widely in food plants. There is a close association between the sensory and phenolic compounds. In addition, there is a close association between processed plant foods and nutritional quality of freshness.
 <br>
