--- a/app/views/herbs/graph_four.html.erb
+++ b/app/views/herbs/graph_four.html.erb
@@ -28,13 +28,34 @@ for(var i=0; i < split_herbs.length; i++){
 }
 
 
+var herbData = [];
+var herbNames = [];
+for(var i=0; i < split_herbs.length; i++){
+  if(i > 0){
+    herbNames.push(split_herbs[i][0])
+    herbData.push(split_herbs[i][1])
+  }
+}
+
 var svg = d3.select("#graphFour").append("svg")
-  .attr("height", 500)
-  .attr("width", 500)
+  .attr("height", 800)
+  .attr("width", 600)
 
 var div = d3.select("#graphFour").append("div")
   .attr("class", "tooltip")
   .style("opacity", 0);
+
+
+var g = svg.append("g")
+          .attr("transform", "translate(" + 0 + "," + 250 + ")");
+
+var xScale = d3.scaleBand().range([0, 600]),
+    yScale = d3.scaleLinear().range([200, 0]);
+
+xScale.domain(split_herbs.map(function(d) { return d[0]+", "+d[1]; }));
+yScale.domain([0, d3.max(split_herbs, function(d) { return d[1]; })]);
+
+
 
 svg.selectAll("rect")
   .data(split_herbs)
@@ -42,8 +63,8 @@ svg.selectAll("rect")
     .attr("class", "bar")
     .attr("height", function(d, i){ console.log("d: " + d); return d[5]*30;})
     .attr("width", "7")
-    .attr("x", function(d, i){ return (i * 7);})
-    .attr("y", function(d, i){ return 500 - (d[5]*30);})
+    .attr("x", function(d, i){ return (i * 7) + i;})
+    .attr("y", function(d, i){ return 600 - (d[5]*30);})
     .attr("stroke", "black")
     .attr("stroke-width", "0.5")
     .on('mouseover', function(d, i){
@@ -58,6 +79,17 @@ svg.selectAll("rect")
           .style("border-radius", "5px")
           .style("background-color", "#eaf4ff");
     });
+
+svg.append("g")
+    .attr("transform", "translate(0," + 600 + ")")
+    .attr("class", "fooBar")
+    .call(d3.axisBottom(xScale));
+svg.selectAll("text")
+    .attr("y", 0)
+    .attr("x", 9)
+    .attr("dy", ".35em")
+    .attr("transform", "rotate(90)")
+    .style("text-anchor", "start");
 
 
 </script>
