--- a/app/views/herbs/graph_one.html.erb
+++ b/app/views/herbs/graph_one.html.erb
@@ -18,14 +18,11 @@
 </svg>
 
 <div class="container">
-
-<svg class="chart">
-</svg>
-
 	<center>
 		<div id="graphOne">
 		</div>
 	</center>
+	<p-small><b>Note:</b> Measurements are in  (mg GAE/g dw).</p-small>
 		<%= render 'static_pages/phenolic_compounds' %>
 </div>
 
@@ -55,7 +52,7 @@ console.log("herbNames: " + herbNames);
 
 var svg = d3.select("#graphOne").append("svg")
   .attr("height", 800)
-  .attr("width", 500)
+  .attr("width", 600)
 
 var div = d3.select("#graphOne").append("div")
   .attr("class", "tooltip")
@@ -65,25 +62,11 @@ var div = d3.select("#graphOne").append("div")
 var g = svg.append("g")
           .attr("transform", "translate(" + 0 + "," + 250 + ")");
 
-var xScale = d3.scaleBand().range([0, 500]),
+var xScale = d3.scaleBand().range([0, 600]),
     yScale = d3.scaleLinear().range([200, 0]);
 
-xScale.domain(split_herbs.map(function(d) { return d[0]; }));
+xScale.domain(split_herbs.map(function(d) { return d[0]+", "+d[1]; }));
 yScale.domain([0, d3.max(split_herbs, function(d) { return d[1]; })]);
-
-/*g.append("g")
-    .attr("transform", "translate(0," + 250 + ")")
-		.attr("class", "fooBar")
-    .call(d3.axisBottom(xScale));
-*/
-
-/*g.selectAll("text")
-    .attr("y", 0)
-    .attr("x", 9)
-    .attr("dy", ".35em")
-    .attr("transform", "rotate(90)")
-    .style("text-anchor", "start");
-*/
 
 
 svg.selectAll("rect")
@@ -92,7 +75,7 @@ svg.selectAll("rect")
     .attr("class", "bar")
     .attr("height", function(d, i){ console.log("d: " + d); return d[1]*2;})
     .attr("width", "7")
-    .attr("x", function(d, i){ return (i * 7);})
+    .attr("x", function(d, i){ return (i * 7) + i;})
     .attr("y", function(d, i){ return 600 - (d[1]*2);})
     .attr("stroke", "black")
     .attr("stroke-width", "0.5")
@@ -120,27 +103,20 @@ svg.selectAll("text")
     .attr("transform", "rotate(90)")
     .style("text-anchor", "start");
 
-var paddingH = 50;
-var paddingV = 50;
-var xScale, yScale;
-xScale = d3.scaleLinear()
-				.domain( [ 0, 50 + d3.max( split_herbs, function( d ) { return d.x }) ] )
-				.range( [ paddingH, 500 - split_herbs ] );
-yScale = d3.scaleLinear()
-				.domain( [ 0, 50 + d3.max( dataset, function( d ) { return d.y }) ] )
-				.range( [ svgHeight - (paddingV * 2), paddingV ] );
 
-svg.append('g')
-	.attr('transform', 'translate(' + 0 + ', ' + (height - paddingV*2) + ')')
-	.call(d3.axisBottom(xScale)
-					.ticks(20));
+/*g.append("g")
+    .attr("transform", "translate(0," + 250 + ")")
+		.attr("class", "fooBar")
+    .call(d3.axisBottom(xScale));
+*/
 
-svg.append("g")
-	.attr("transform", "translate( " + paddingV + ', ' + 0 + ')')
-	.call(d3.axisLeft(yScale)
-					.ticks(20));
-
-
+/*g.selectAll("text")
+    .attr("y", 0)
+    .attr("x", 9)
+    .attr("dy", ".35em")
+    .attr("transform", "rotate(90)")
+    .style("text-anchor", "start");
+*/
 
 
 /*var fruit = ["banana", "apple", "peach", "apricot", "pear"];
