(styling) made bars wider

--- a/app/views/herbs/graph_four.html.erb
+++ b/app/views/herbs/graph_four.html.erb
@@ -62,8 +62,8 @@ svg.selectAll("rect")
   .enter().append("rect")
     .attr("class", "bar")
     .attr("height", function(d, i){ console.log("d: " + d); return d[5]*30;})
-    .attr("width", "7")
-    .attr("x", function(d, i){ return (i * 7) + i;})
+    .attr("width", "8")
+    .attr("x", function(d, i){ return (i * 7) + (i*1.75);})
     .attr("y", function(d, i){ return 600 - (d[5]*30);})
     .attr("stroke", "black")
     .attr("stroke-width", "0.5")
