--- a/app/views/herbs/graph_five.html.erb
+++ b/app/views/herbs/graph_five.html.erb
@@ -63,7 +63,7 @@ svg.selectAll("rect")
     .attr("class", "bar")
     .attr("height", function(d, i){ console.log("d: " + d); return d[7]*5;})
     .attr("width", "7")
-    .attr("x", function(d, i){ return (i * 7)+i;})
+    .attr("x", function(d, i){ return (i * 7)+(i*1.75);})
     .attr("y", function(d, i){ return 600 - (d[7]*5);})
     .attr("stroke", "black")
     .attr("stroke-width", "0.5")
