(verbiage) added which units the measurements are in with respect to each graph

--- a/app/views/herbs/graph_five.html.erb
+++ b/app/views/herbs/graph_five.html.erb
@@ -6,6 +6,7 @@
 		<div id="graphFive">
 		</div>
 	</center>
+	<p-small><b>Note:</b> Measurements are in (%).</p-small>
 	<%= render 'static_pages/DPPH_sca_cap' %>
 </div>
 
