--- a/app/views/herbs/graph_four.html.erb
+++ b/app/views/herbs/graph_four.html.erb
@@ -7,6 +7,7 @@
 		</div>
 	</center>
 
+	<p-small><b>Note:</b> Measurements are in  ((Fe(II)mmol/g dw).</p-small>
 	<%= render 'static_pages/FRAP_value' %>
 </div>
 
