--- a/app/views/herbs/graph_three.html.erb
+++ b/app/views/herbs/graph_three.html.erb
@@ -6,6 +6,7 @@
 		<div id="graphThree">
 		</div>
 	</center>
+	<p-small><b>Note:</b> Measurements are in  (mg RE/g dw).</p-small>
 		<%= render 'static_pages/flavonoids_content' %>
 </div>
 
