--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-default navbar-expand-sm">
     &nbsp;&nbsp;<%= link_to 'Home', root_path, method: :get %>
     <!--&nbsp;&nbsp;%= link_to 'Info', static_pages_info_path, method: :get %-->
-    <!--&nbsp;&nbsp;%= link_to 'Rooms#show', rooms_show_path, method: :get -->
+    &nbsp;&nbsp;<%= link_to 'Rooms#show', rooms_show_path, method: :get %>
 		&nbsp;&nbsp;<%= link_to 'Herb Data', herbs_graph_two_path, method: :get %><br>
 		&nbsp;&nbsp;
 		<li class="dropdown" style="list-style-type: none;">
